# LLMClassification

./: .gitignore  README.md  data.py  main.ipynb  model.py  pyproject.toml  test_results_with_onehot.csv  train.py
mlruns/0/: meta.yaml
mlruns/763792922687873175/: meta.yaml
mlruns/763792922687873175/26b353fc22d645ed8cb55c125058f063/: meta.yaml
mlruns/763792922687873175/26b353fc22d645ed8cb55c125058f063/metrics/: loss  val_loss
mlruns/763792922687873175/26b353fc22d645ed8cb55c125058f063/tags/: mlflow.runName
mlruns/763792922687873175/4ae8f8ee148248b18bfc80f8ff485785/: meta.yaml
mlruns/763792922687873175/4ae8f8ee148248b18bfc80f8ff485785/metrics/: loss  val_loss
mlruns/763792922687873175/4ae8f8ee148248b18bfc80f8ff485785/tags/: mlflow.runName
mlruns/763792922687873175/57fb67bcca9c4bd6ad5f6aeadebeabe8/: meta.yaml
mlruns/763792922687873175/57fb67bcca9c4bd6ad5f6aeadebeabe8/metrics/: loss  val_loss
mlruns/763792922687873175/57fb67bcca9c4bd6ad5f6aeadebeabe8/tags/: mlflow.runName
mlruns/763792922687873175/85146d90d1c8432aa71679970487ce50/: meta.yaml
mlruns/763792922687873175/85146d90d1c8432aa71679970487ce50/metrics/: loss  val_loss
mlruns/763792922687873175/85146d90d1c8432aa71679970487ce50/tags/: mlflow.runName
mlruns/763792922687873175/bb6825c8cf0d48ba8d08fcee8ba8aac1/: meta.yaml
mlruns/763792922687873175/bb6825c8cf0d48ba8d08fcee8ba8aac1/tags/: mlflow.runName
mlruns/763792922687873175/models/m-27c1f13ae86440d681b621a9b652e6b9/: meta.yaml
mlruns/models/LLM Classifcation Model/: meta.yaml
mlruns/models/LLM Classifcation Model/version-1/: meta.yaml
(+33 files in other folders)
