[project]
name = "end-to-end-driving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.11.0",
    "mlflow>=2.17.2",
    "opencv-python>=4.12.0.88",
    "pip>=25.3",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
